# fundregistry

./: .env.example  .gitignore  CONTRIBUTING.md  ENV-VARS.md  LICENSE  README.md  SECURITY.md  anchor_preflight.py  app.py  bitcoin_address.py  payment_preflight.py  promo_codes.py  pyproject.toml  requirements.txt  sweep_pages.py
static/: beta-banner.js  campaign-key.html  campaign-key.js  contact-bubble.js  create.html  create.js  fund-badge.html  fund-demo.js  fund-expired.html  fund-expired.js  fund-free.html  fund-tombstone.html  fund-vanity.html  how-it-works.html  index.html  index.js  llms.txt  manage.html  manage.js  renew.html  renew.js  robots.txt  sitemap.xml  styles.css  terms.html
tests/: test_fund_registry.py
